--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,13 @@
             <version>8.0.29</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.tomcat</groupId>
+            <artifactId>tomcat-dbcp</artifactId>
+            <version>9.0.10</version>
+        </dependency>
+
+
     </dependencies>
 
     <build>
